# io

./: .dockerignore  .gitignore  CLAUDETENKS_FUSION.md  CLAUDETENKS_FUSION_SUMMARY.md  CLAUDETENKS_MAJOR_GAPS_COMPLETE.md  CLAUDETENKS_PARITY_REPORT.md  CLAW_CODE_FILE_PARITY.md  Dockerfile  FINAL_PARITY_100_PERCENT.md  IO_REWRITE_PLAN.md  README.md  UPSTREAM.md  pyproject.toml  soul.example.md
acp_registry/: agent.json
assets/: README.md
docs/: README.md  acp-setup.md  docker.md  feature_inventory_io_vs_hermes.md  gauss_new_user.md  gauss_parity_report.md  honcho-integration-spec.html  honcho-integration-spec.md  memory-nuggets-and-honcho.md  nuggets_parity.md  open_gauss_hermes_port.md
environments/: README.md  __init__.py  agent_loop.py  agentic_opd_env.py  io_base_env.py  patches.py  tool_context.py  web_research_env.py
landingpage/: README.md  index.html  script.js  style.css
optional-skills/: DESCRIPTION.md  README.md
scripts/: README.md  discord-voice-doctor.py  install.cmd  install.ps1  install.sh  io-gateway  release.py  sample_and_compress.py
skills/: README.md
tests/: test_backends_modal_daytona.py  test_cli_integration.py  test_cli_surfaces.py  test_config_runtime.py  test_context_references.py  test_copilot_auth.py  test_delegate_tools_smoke.py  test_environment_streaming.py  test_extensions.py  test_fuzzy_match.py  test_gateway_and_cron.py  test_gateway_api_server.py  test_gateway_platform_matrix.py  test_gateway_reconnect.py  test_gateway_telegram.py  test_gateway_webhook.py  test_gauss_project.py  test_hermes_contracts.py  test_io_ai.py  (+30 more)
(+346 files in other folders)
